--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>祝福泡泡生成器</title>
+    <!-- GitHub Pages SPA支持 -->
+    <script type="text/javascript">
+      // 保存当前URL到会话存储，用于404页面重定向
+      if (window.location.hostname.indexOf('github.io') > -1) {
+        sessionStorage.redirect = window.location.href;
+      }
+    </script>
+    <!-- 确保GitHub Pages正确加载 -->
+    <base href="/ted/" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
+    <!-- GitHub Pages SPA重定向脚本 -->
+    <script src="./redirect-script.js"></script>
   </body>
 </html>
